Export sun.nio.ch to lmdbjava